# ikigai

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  portfolio-project-criteria.md  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/admin/: package.json  tailwind.config.ts  tsconfig.json
apps/agent-dashboard/: next.config.mjs  package.json
apps/line-bot/: Dockerfile  package.json  tsconfig.json
docker/: docker-compose.yml
docs/: AI-Powered Full-Stack Real Estate Automation Platform for the Japanese Market.md  Additional Features — Future Roadmap.md  Code Quality Excellence Research Prompt.md  Data Strategy for a Portfolio Project-part-2.md  Data Strategy for a Portfolio Project.md  LOCAL_DEVELOPMENT.md  Portfolio MVP Strategy Building for Demonstration Not Production.md  Regulatory Compliance Architecture Document.md  The IKIGAI Visual Design Language.md  The Ultimate Implementation Prompt.md
ml/: README.md
services/orchestrator/: Dockerfile  pyproject.toml  requirements.txt
services/orchestrator/src/: graph.py  main.py  prompts.py
services/orchestrator/src/context/: state.py
services/orchestrator/src/models/: state.py
services/orchestrator/src/subgraphs/: document.py  mediation.py  renovation.py  search.py  transaction.py  viewing.py
services/orchestrator/src/tools/: api.py  document.py  pdf_generator.py  pricing.py  search.py  vr.py
services/orchestrator/src/utils/: db.py  service_client.py
services/orchestrator/tests/: test_graph.py
(+101 files in other folders)
