[project]
name = "ikigai-orchestrator"
version = "0.1.0"
description = "AI Orchestration Service for IKIGAI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "langgraph>=0.0.26",
    "langchain-anthropic>=0.1.4",
    "langchain-cohere>=0.1.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
